fix(qol): re-grab polish / 404
